16 June 2017: Wouter
	- Fix #1301: memory leak in respip and tests.
	- Free callback in edns-subnetmod on exit and restart.
	- Fix memory leak in sldns_buffer_new_frm_data.
	- Fix memory leak in dnscrypt config read.
	- Fix dnscrypt chacha cert support ifdefs.
	- Fix dnscrypt chacha cert unit test escapes in grep.
	- Remove asynclook tests that cause test and purifier problems.
	- Fix to unlock view in view test.

15 June 2017: Wouter
	- Fix stub zone queries leaking to the internet for
	  harden-referral-path ns checks.
	- Fix query for refetch_glue of stub leaking to internet.

13 June 2017: Wouter
	- Fix #1279: Memory leak on reload when python module is enabled.
	- Fix #1280: Unbound fails assert when response from authoritative
	  contains malformed qname.  When 0x20 caps-for-id is enabled, when
	  assertions are not enabled the malformed qname is handled correctly.
	- 1.6.3 tag created, with only #1280 fix, trunk is 1.6.4 development.
	- More fixes in depth for buffer checks in 0x20 qname checks.

12 June 2017: Wouter
	- Fix #1278: Incomplete wildcard proof.

8 June 2017: Ralph
	- Added domain name based ECS whitelist.

8 June 2017: Wouter
	- Detect chacha for dnscrypt at configure time.
	- dnscrypt unit tests with chacha.

7 June 2017: Wouter
	- Fix that unbound-control can set val_clean_additional and val_permissive_mode.
	- Add dnscrypt XChaCha20 tests.

6 June 2017: Wouter
	- Add an explicit type cast for TCP FASTOPEN fix.
	- renumbering B-Root's IPv6 address to 2001:500:200::b.
	- Fix #1275: cached data in cachedb is never used.
	- Fix #1276: [dnscrypt] add XChaCha20-Poly1305 cipher.

1 June 2017: Ralph
	- Fix #1274: automatically trim chroot path from dnscrypt key/cert paths
	  (from Manu Bretelle).

1 June 2017: Wouter
	- Fix fastopen EPIPE fallthrough to perform connect.

31 May 2017: Ralph
	- Also use global local-zones when there is a matching view that does
	  not have any local-zone specified.

31 May 2017: Wouter